--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <header class="header">
   <div class="logo">
-    <img src="Metube-logo.png" alt="Logo" />
+    <img src="metube-logo.png" alt="Logo" />
     <h1>Metube</h1>
   </div>
   <form class="search-bar">
