--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     
   <div class="title">
-    <img src="GuLXqYUagAkkHZB.jpeg" alt="Wuthering Wave">
+    <img src="guLXqYUagAkkHZB.jpeg" alt="Wuthering Wave">
     <h1>Wuthering Wave</h1>
   </div>
 
