--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <header class="header">
   <div class="logo">
-    <img src="img/Metube-logo.png" alt="Logo" />
+    <img src="metube-logo.png" alt="Logo" />
     <h1>Metube</h1>
   </div>
   <form class="search-bar">
@@ -28,12 +28,12 @@
 
     
   <div class="title">
-    <img src="Img/GuLXqYUagAkkHZB.jpeg" alt="Wuthering Wave">
+    <img src="GuLXqYUagAkkHZB.jpeg" alt="Wuthering Wave">
     <h1>Wuthering Wave</h1>
   </div>
 
   <div class="result">
-    <img src="Img/wuthering-waves-uw6vy.jpg" alt="Wuthering Waves" class="avatar">
+    <img src="wuthering-waves-uw6vy.jpg" alt="Wuthering Waves" class="avatar">
     <div class="info">
       <a href="https://wutheringwaves.kurogames.com" class="title">Wuthering Waves</a>
       <div class="url">https://wutheringwaves.kurogames.com</div>
@@ -44,12 +44,12 @@
       </div>
     </div>
   </div>
-    <img src="Img/Cartethyia_Card.png" alt="">
+    <img src="Cartethyia_Card.png" alt="">
   <video controls autoplay muted loop>
     <source src="Cartethyia-tiktok.mp4" type="video/mp4">
     Trình duyệt của bạn không hỗ trợ video.
   </video>
-    <img src="Img/Carlotta_Card.png" alt="">    
+    <img src="Carlotta_Card.png" alt="">    
     
 </body>
 
