--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     Trình duyệt của bạn không hỗ trợ video.
   </video>
     <img src="Carlotta_Card.png" alt="">    
-    
+  <a href="about.html">Mini Game</a>
 </body>
 
 </html>
