--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     Trình duyệt của bạn không hỗ trợ video.
   </video>
     <img src="Carlotta_Card.png" alt="">    
-  <div>
+  <div id="game">
       <a href="about.html">Mini Game</a>
   </div>
 </body>
